// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`template custom template should be able to call defaultTemplate 1`] = `
"<!doctype html>
    <html >
      <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"generator\\" content=\\"Frontity\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <meta rel=\\"custom\\" />
      </head>
      <body >
        <div id=\\"root\\">undefined</div>
        
      </body>
    </html>"
`;

exports[`template custom template should define a custom template 1`] = `"template()"`;

exports[`template the default template should accept head, scripts and attributes 1`] = `
"<!doctype html>
    <html lang=\\"en\\">
      <head>
        <meta charset=\\"utf-8\\">
        <meta name=\\"generator\\" content=\\"Frontity\\">
        <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
        <custom-tag attribute=\\"value\\" />
      </head>
      <body class=\\"custom\\">
        <div id=\\"root\\">undefined</div>
        <script src=\\"/path/to/script\\"></script>
      </body>
    </html>"
`;
